<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaterialBDActivity">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="Id"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="Nome do material"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextId"
        app:layout_constraintTop_toTopOf="@+id/editTextId"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextDataCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Data do cadastro"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextNome"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextUnidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Unidades"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextDataCadastro"
        app:layout_constraintTop_toTopOf="@+id/editTextDataCadastro"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="Tipo de material"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextUnidade"
        app:layout_constraintTop_toTopOf="@+id/editTextUnidade"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:onClick="cadastrar"
        android:text="@string/txtCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTipo" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:onClick="buscar"
        android:text="@string/txtBuscar"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"
        android:onClick="excluir"
        android:text="@string/txtExcluir"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="alterar"
        android:text="@string/txtAlterar"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:onClick="listar"
        android:text="@string/txtListar"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="42dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="Id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:text="Nome"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDataCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="65dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="77dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="3dp"
        android:text="Unidades"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUnidade"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="Tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>